--- a/componentes/estilo.css
+++ b/componentes/estilo.css
@@ -1,6 +1,6 @@
 /*Criando um background linear*/
 .bg-1 {
-  background-image: linear-gradient(to right, #020024, #090979, #00d4ff);
+  background-image: linear-gradient(to right, #020024, #090979);
 }
 
 .opacidade {
@@ -109,7 +109,7 @@
   transform-origin: top center;
   --rotate: 10deg;
   transform: rotateX(var(--rotate));
-  transition: transform 0.5s;
+  transition: transform 0.3s;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
